--- a/static/css/main.css
+++ b/static/css/main.css
@@ -329,7 +329,7 @@ body {
 .search-wrap__field {
   bottom: 0;
   left: 0;
-  height: calc(100vh - 55px);
+  height: calc(var(--vh, 1vh) * 100 - 55px);
   background: #fff;
   transition: opacity 300ms, visibility 300ms;
   opacity: 0;
@@ -344,7 +344,8 @@ body {
   visibility: visible;
 }
 
-body.search-enabled {
+body.search-enabled,
+body.search-active {
   overflow-y: hidden;
 }
 
@@ -2873,7 +2874,8 @@ body {
 }
 
 .hooper-var-width .slick-slide {
-  width: 20vw;
+  /* width: 20vw; */
+  width: 450px;
 }
 
 .hooper-var-width .var-width-items {
@@ -2927,10 +2929,7 @@ body {
   padding: 40px 35px;
 }
 
-.hooper-var-second
-  .slick-slide
-  .card-items
-  > *:not(.card-background-1) {
+.hooper-var-second .slick-slide .card-items > *:not(.card-background-1) {
   position: relative;
   z-index: 1;
 }
@@ -4014,8 +4013,9 @@ body {
 
 .card-items.card-active .card-items-img .card-back {
   transform: translate(0px, 50%) rotate(90deg);
-  top: -25px;
-  max-width: 200px;
+  top: -50px;
+  /* top: -25px; */
+  /* max-width: 200px; */
 }
 
 .card-items-img > img {
@@ -4069,7 +4069,7 @@ body {
 
 .dropdown-content__sub ul {
   background: #fff;
-  box-shadow: 0 -4px 20px rgba(0,0,0,0.1098);
+  box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.1098);
   border-radius: 5px;
   padding: 0.5rem 0 !important;
 }
@@ -4085,7 +4085,7 @@ body {
 }
 
 .header-top .dropdown--content ul > li:hover .dropdown-content__sub {
-    opacity: 1;
+  opacity: 1;
   visibility: visible;
 }
 
@@ -4100,7 +4100,7 @@ body {
 }
 
 .hooper-slide-1 .set-offset-slide {
-  height: calc(100vh - 61px);
+  height: calc(var(--vh, 1vh) * 100 - 62px) !important;
 }
 
 .hooper-slide-5 {
@@ -4229,29 +4229,29 @@ body {
 }
 
 .notification-wrap p {
-  margin-bottom: 0
+  margin-bottom: 0;
 }
 
 .dropdown--content > ul > li {
   position: static;
 }
 
-.dropdown--content ul>li:hover .dropdown-content__sub {
+.dropdown--content ul > li:hover .dropdown-content__sub {
   opacity: 1;
   visibility: visible;
 }
 
 .orphan-hooper-1 .hooper-slide {
-  height: auto !important
+  height: auto !important;
 }
 
 .orphan-text-2 h1 {
   font-size: 18px;
   line-height: 28px;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
 }
 
-.vs__dropdown-menu > *{
+.vs__dropdown-menu > * {
   /*padding-top: .75rem !important;*/
   /*padding-bottom: .75rem !important;*/
   height: 42px;
@@ -4264,7 +4264,7 @@ body {
 
 .hidden-content-left img {
   display: block;
-  margin-top: .25rem;
+  margin-top: 0.25rem;
 }
 
 .mobile-menu--items button {
@@ -4301,7 +4301,7 @@ body {
 
 @media (max-width: 1600px) and (max-height: 760px) {
   .hooper-var-width .slick-slide {
-    width: 360px;
+    width: 400px;
   }
 
   .hooper-var-width .card-items h1 {
@@ -4349,6 +4349,10 @@ body {
     line-height: 26px;
   }
 
+  body .btn {
+    padding: calc(8px + 0.1588vw) calc(8px + 0.5249vw) !important;
+  }
+
   .custom-arrow__right {
     right: -20px;
   }
@@ -4362,6 +4366,10 @@ body {
   .title-60 {
     font-size: 40px;
     line-height: 55px;
+  }
+
+  .set-offset-slide {
+    height: calc(100vh - 125px);
   }
   /* .hooper-var-second .var-width-items .card-items,
   .card-items__top,
@@ -4485,7 +4493,7 @@ body {
 
   .gallery-items-wrap {
     width: 100%;
-    margin: 0
+    margin: 0;
   }
 
   .bank-year-text {
@@ -4989,7 +4997,12 @@ body {
   }
 
   .hooper-slide-1 .set-offset-slide {
-    height: calc(100vh - 45px);
+    /* height: calc(100vh - 45px); */
+    height: calc(var(--vh, 1vh) * 100 - 43px) !important;
+  }
+
+  .hooper-var-width .slick-slide {
+    width: 90vw;
   }
 
   .title-route-items {
@@ -5010,7 +5023,8 @@ body {
     height: 40px;
   }
 
-  .tariff-table-items p, .tariff-table-items span {
+  .tariff-table-items p,
+  .tariff-table-items span {
     font-size: 15px;
     line-height: 24px;
   }
@@ -5321,9 +5335,9 @@ body {
     padding: 20px;
   }
 
-  .mobil-table.cash-rate-table {
+  /* .mobil-table.cash-rate-table {
     overflow: visible;
-  }
+  } */
 
   .accordion-header {
     padding: 20px;
@@ -5351,13 +5365,13 @@ body {
     display: none;
   }
 
-  .mobil-table .table-tbody,
+  /* .mobil-table .table-tbody,
   .mobil-table .table-tbody tr {
     display: flex;
     width: 100%;
-  }
+  } */
 
-  .mobil-table .table-tbody tr {
+  /* .mobil-table .table-tbody tr {
     flex-wrap: wrap;
   }
 
@@ -5369,7 +5383,7 @@ body {
   .mobil-table .table-tbody tr td {
     width: 33.333%;
     text-align: left;
-  }
+  } */
 
   .cash-rate-table .table td {
     padding: 20px;
@@ -5517,7 +5531,7 @@ body {
   .hooper-var-width .var-width-items .card-items {
     margin: 0;
     min-height: 525px !important;
-    padding-bottom: 20px;
+    padding: 20px !important;
   }
 
   .app-exchange-wrap img {
@@ -5611,6 +5625,10 @@ body {
 
   .call-center-phones .btn {
     padding: calc(3px + 0.183vw) calc(7px + 0.5249vw) !important;
+  }
+
+  .currency-container .btn {
+    padding: calc(4px + 0.183vw) calc(7px + 0.5249vw) !important;
   }
 
   .vacancies-container {
