Damn Google Key is working and added some reg exp validation on feedback component :)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5612,7 +5612,12 @@ body {
   .app-exchange-cell {
     width: 33.33333%;
     margin: 0;
+    text-align: center;
   }
+
+    body .js-scroll {
+        display: none !important;
+    }
 
   .app-router,
   .nested-slide-text {
