--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4309,6 +4309,176 @@ body {
   text-transform: uppercase;
 }
 
+.map-pane {
+  margin-top: 50px;
+}
+
+.aspect-ratio {
+  position: relative;
+  padding-top: calc(25% + 50px);
+}
+
+.ratio-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.GMap,
+.GMap__Wrapper {
+  height: 100% !important;
+}
+
+.info-sidebar {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  max-width: 375px;
+  width: 100%;
+  height: calc(100% - 75px);
+  border-radius: 4px;
+  overflow-y: auto;
+  background: #fff;
+  box-shadow: 0 0 8px 0px #00000024;
+}
+
+.sidebar-inner {
+  height: 100%;
+  padding: 1rem;
+}
+
+.sidebar-searchbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(var(--main-color), 0.12);
+}
+
+.sidebar-searchbar input {
+  flex: 1;
+  padding: 0.65rem 0.5rem 0.65rem 0;
+}
+
+.info-content-items {
+  padding: 0.4rem;
+  padding-left: 0;
+  font-family: var(--semiBold);
+  font-size: 0.9rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.info-content-items span {
+  flex: 1;
+  padding-right: 1rem;
+}
+
+.info-content-items svg {
+  margin-left: auto;
+}
+
+.info-content-items:hover {
+  color: rgba(var(--main-color), 1);
+}
+
+.info-sidebar-content {
+  padding: 0.5rem 0;
+}
+
+/* width */
+.info-sidebar::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+.info-sidebar::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+/* Handle */
+.info-sidebar::-webkit-scrollbar-thumb {
+  background: rgba(var(--secondary-color), 1);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.info-sidebar::-webkit-scrollbar-thumb:hover {
+  background: rgba(var(--secondary-color), 1);
+}
+
+.app-modal,
+.app-modal__overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 400ms;
+}
+
+.app-modal.active,
+.app-modal.active .app-modal__overlay {
+  opacity: 1;
+  visibility: visible;
+}
+
+.app-modal {
+  z-index: 99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.app-modal__overlay {
+  background: rgb(43 67 146 / 75%);
+}
+
+.app-modal__content {
+  max-width: 1000px;
+  width: 100%;
+  background: #fff;
+  position: relative;
+  border-radius: 4px;
+}
+
+.modal-aspect-ratio {
+  position: relative;
+  padding-top: calc(50% + 100px);
+}
+
+.modal-ratio__map {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-close {
+  position: absolute;
+  top: -20px;
+  width: 40px;
+  height: 40px;
+  right: -20px;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  box-shadow: 0 0 6px #00000078;
+}
+
+.modal-close i {
+  width: 20px;
+  height: 20px;
+  display: block;
+  cursor: pointer;
+}
+
 /***************** MEDIA ***************/
 
 /* .header,
@@ -4595,6 +4765,10 @@ body {
   .hooper-container.scrolled .hooper-slide-2 .set-offset-slide,
   .hooper-container.scrolled .hooper-slide-3 .set-offset-slide {
     height: 725px;
+  }
+
+  .app-modal__content {
+    max-width: calc(100% - 65px);
   }
 
   .card-items-container .card-items {
@@ -5615,9 +5789,9 @@ body {
     text-align: center;
   }
 
-    body .js-scroll {
-        display: none !important;
-    }
+  body .js-scroll {
+    display: none !important;
+  }
 
   .app-router,
   .nested-slide-text {
